Added proxy plugin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,11 @@ services:
       WORDPRESS_DEBUG: 1
       OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
       OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
+      BCC_WP_PROXY_KEY: wp_proxy_key
     volumes:
       - "./plugins/bcc-login:/var/www/html/wp-content/plugins/bcc-login"
+      - "./plugins/bcc-wp-proxy:/var/www/html/wp-content/plugins/bcc-wp-proxy"
+      - ".htaccess:/var/www/html/.htaccess"
     networks:
       - wp
     restart: unless-stopped
